--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,21 +11,34 @@ dependencies:
   flutter:
     sdk: flutter
 
-# Utility Packages
+  # Utility Packages
+  dio: ^5.5.0
+  intl: ^0.19.0
+  logger: ^2.3.0
+  get_it: ^7.7.0
+  injectable: ^2.4.2
+  url_launcher: ^6.3.0
+  path_provider: ^2.1.3
 
-# Icons
-iconsax: ^0.0.8
-cupertino_icons: ^1.0.8
+  # Icons
+  iconsax: ^0.0.8
+  cupertino_icons: ^1.0.8
 
-# State Management
-flutter_bloc: ^8.1.6
+  # State Management
+  isar: ^3.1.0+1
+  flutter_bloc: ^8.1.6
+  isar_flutter_libs: ^3.1.0+1
 
 # Product Specific
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
+
+  build_runner: ^2.4.11
+  isar_generator: ^3.1.0+1
+  injectable_generator: ^2.4.2
 
 flutter:
   uses-material-design: true
