--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   injectable: ^2.4.2
   url_launcher: ^6.3.0
   path_provider: ^2.1.3
+  flutter_native_splash: ^2.4.1
 
   # Icons
   iconsax: ^0.0.8
