--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ flutter:
 #------------------ LOCAL ASSETS ------------------#
 assets: -assets/fonts/
   -assets/icons/
-  -assets/images/
+  -assets/images/on_boarding_images/
   -assets/logos/
 
 #------------------ LOCAL FONTS ------------------#
