--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,12 @@ dependencies:
   intl: ^0.19.0
   logger: ^2.3.0
   get_it: ^7.7.0
+  go_router: ^14.2.0
   injectable: ^2.4.2
   url_launcher: ^6.3.0
   path_provider: ^2.1.3
   flutter_native_splash: ^2.4.1
+  smooth_page_indicator: ^1.1.0
 
   # Icons
   iconsax: ^0.0.8
@@ -45,27 +47,28 @@ flutter:
   uses-material-design: true
 
 #------------------ LOCAL ASSETS ------------------#
-assets: -assets/fonts/
-  -assets/icons/
-  -assets/images/on_boarding_images/
-  -assets/logos/
+  assets: 
+    - assets/icons/
+    - assets/fonts/
+    - assets/images/on_boarding_images/
+    - assets/logos/
 
 #------------------ LOCAL FONTS ------------------#
-fonts:
-  - family: Poppins
-    fonts:
-      - asset: assets/fonts/Poppins-Light.ttf
-        weight: 300
-      - asset: assets/fonts/Poppins-Regular.ttf
-        weight: 400
-      - asset: assets/fonts/Poppins-Italic.ttf
-        style: italic
-      - asset: assets/fonts/Poppins-Medium.ttf
-        weight: 500
-      - asset: assets/fonts/Poppins-MediumItalic.ttf
-        weight: 500
-        style: italic
-      - asset: assets/fonts/Poppins-SemiBold.ttf
-        weight: 600
-      - asset: assets/fonts/Poppins-Bold.ttf
-        weight: 800
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Poppins-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Poppins-Italic.ttf
+          style: italic
+        - asset: assets/fonts/Poppins-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Poppins-MediumItalic.ttf
+          weight: 500
+          style: italic
+        - asset: assets/fonts/Poppins-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Poppins-Bold.ttf
+          weight: 800
