--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   intl: ^0.19.0
   logger: ^2.3.0
   get_it: ^7.7.0
+  equatable: ^2.0.5
   go_router: ^14.2.0
   injectable: ^2.4.2
   url_launcher: ^6.3.0
