--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ flutter:
 #------------------ LOCAL ASSETS ------------------#
   assets: 
     - assets/icons/
+    - assets/icons/categories/
     - assets/fonts/
     - assets/images/on_boarding_images/
     - assets/images/login_logos/
