Add banners images

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ flutter:
     - assets/images/on_boarding_images/
     - assets/images/login_logos/
     - assets/images/animations/
+    - assets/images/banners/
     - assets/logos/
 
 #------------------ LOCAL FONTS ------------------#
