--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   injectable: ^2.4.2
   url_launcher: ^6.3.0
   path_provider: ^2.1.3
+  carousel_slider: ^4.2.1
   flutter_native_splash: ^2.4.1
   smooth_page_indicator: ^1.1.0
 
