Vertical Card Thumbnail, Wishlist Button, Discount Tag

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ flutter:
     - assets/images/login_logos/
     - assets/images/animations/
     - assets/images/banners/
+    - assets/images/products/
     - assets/logos/
 
 #------------------ LOCAL FONTS ------------------#
