--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,6 @@ dependencies:
   injectable: ^2.4.2
   url_launcher: ^6.3.0
   path_provider: ^2.1.3
-  carousel_slider: ^4.2.1
   flutter_native_splash: ^2.4.1
   smooth_page_indicator: ^1.1.0
 
@@ -34,7 +33,9 @@ dependencies:
   flutter_bloc: ^8.1.6
   isar_flutter_libs: ^3.1.0+1
 
-# Product Specific
+  # Product Specific
+  readmore: ^3.0.0
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
