--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
 
   # Utility Packages
   dio: ^5.5.0
+  http: ^1.2.2
   intl: ^0.19.0
   logger: ^2.3.0
   get_it: ^7.7.0
@@ -20,7 +21,10 @@ dependencies:
   go_router: ^14.2.0
   injectable: ^2.4.2
   url_launcher: ^6.3.0
+  fluttertoast: ^8.2.8
   path_provider: ^2.1.3
+  flutter_dotenv: ^5.1.0
+  flutter_stripe: ^11.0.0
   flutter_native_splash: ^2.4.1
   smooth_page_indicator: ^1.1.0
 
@@ -52,8 +56,10 @@ flutter:
 
   #------------------ LOCAL ASSETS ------------------#
   assets:
+    - assets/.env
     - assets/icons/
     - assets/icons/categories/
+    - assets/icons/payment/
     - assets/fonts/
     - assets/images/on_boarding_images/
     - assets/images/login_logos/
