--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,8 @@ dependencies:
   path_provider: ^2.1.3
   flutter_dotenv: ^5.1.0
   flutter_stripe: ^11.0.0
-  flutter_native_splash: ^2.4.1
   smooth_page_indicator: ^1.1.0
+  flutter_native_splash: ^2.4.1
 
   # Icons
   iconsax: ^0.0.8
@@ -36,6 +36,9 @@ dependencies:
   isar: ^3.1.0+1
   flutter_bloc: ^8.1.6
   isar_flutter_libs: ^3.1.0+1
+
+  # Firebase
+  firebase_core: ^3.4.0
 
   # Product Specific
   readmore: ^3.0.0
