--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   path_provider: ^2.1.3
   flutter_dotenv: ^5.1.0
   flutter_stripe: ^11.0.0
+  shared_preferences: ^2.3.2
   smooth_page_indicator: ^1.1.0
   flutter_native_splash: ^2.4.1
 
