--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   # Utility Packages
   dio: ^5.5.0
   http: ^1.2.2
+  formz: ^0.7.0
   intl: ^0.19.0
   logger: ^2.3.0
   get_it: ^7.7.0
