--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,15 @@ dependencies:
   injectable: ^2.4.2
   url_launcher: ^6.3.0
   fluttertoast: ^8.2.8
-  path_provider: ^2.1.3
+  path_provider: ^2.1.4
   flutter_dotenv: ^5.1.0
   flutter_stripe: ^11.0.0
+  json_annotation: ^4.9.0
+  json_serializable: ^6.8.0
   shared_preferences: ^2.3.2
   smooth_page_indicator: ^1.1.0
   flutter_native_splash: ^2.4.1
+  internet_connection_checker: ^1.0.0+1
 
   # Icons
   iconsax: ^0.0.8
