--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,11 @@ dependencies:
   # Utility Packages
   dio: ^5.5.0
   http: ^1.2.2
-  formz: ^0.7.0
+  formz: ^0.7.0  
   intl: ^0.19.0
   logger: ^2.3.0
   get_it: ^7.7.0
+  freezed: ^2.5.2
   equatable: ^2.0.5
   go_router: ^14.2.0
   injectable: ^2.4.2
@@ -25,9 +26,9 @@ dependencies:
   fluttertoast: ^8.2.8
   path_provider: ^2.1.4
   flutter_dotenv: ^5.1.0
-  flutter_stripe: ^11.0.0
   json_annotation: ^4.9.0
-  json_serializable: ^6.8.0
+  flutter_stripe: ^11.0.0
+  freezed_annotation: ^2.4.4
   shared_preferences: ^2.3.2
   smooth_page_indicator: ^1.1.0
   flutter_native_splash: ^2.4.1
@@ -44,11 +45,14 @@ dependencies:
 
   # Firebase
   firebase_core: ^3.4.0
+  firebase_auth: ^5.3.1
+  cloud_firestore: ^5.4.3
 
   # Product Specific
   readmore: ^3.0.0
   carousel_slider: ^4.2.1
   flutter_rating_bar: ^4.0.1
+
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +61,7 @@ dev_dependencies:
 
   build_runner: ^2.4.11
   isar_generator: ^3.1.0+1
+  json_serializable: ^6.8.0
   injectable_generator: ^2.4.2
 
 flutter:
