--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   intl: ^0.19.0
   logger: ^2.3.0
   get_it: ^7.7.0
+  lottie: ^3.1.3
   freezed: ^2.5.2
   equatable: ^2.0.5
   go_router: ^14.2.0
@@ -30,6 +31,7 @@ dependencies:
   flutter_stripe: ^11.0.0
   freezed_annotation: ^2.4.4
   shared_preferences: ^2.3.2
+  top_snackbar_flutter: ^3.1.0
   smooth_page_indicator: ^1.1.0
   flutter_native_splash: ^2.4.1
   internet_connection_checker: ^1.0.0+1
