--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   firebase_core: ^3.4.0
   firebase_auth: ^5.3.1
   cloud_firestore: ^5.4.3
+  google_sign_in: ^6.2.2
 
   # Product Specific
   readmore: ^3.0.0
