--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   top_snackbar_flutter: ^3.1.0
   smooth_page_indicator: ^1.1.0
   flutter_native_splash: ^2.4.1
+  flutter_secure_storage: ^9.2.2
   internet_connection_checker: ^1.0.0+1
 
   # Icons
