--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,9 @@ dependencies:
   dio: ^5.5.0
   http: ^1.2.2
   formz: ^0.7.0  
-  intl: ^0.19.0
+  intl: ^0.20.1
   logger: ^2.3.0
-  get_it: ^7.7.0
+  get_it: ^8.0.3
   lottie: ^3.1.3
   freezed: ^2.5.2
   equatable: ^2.0.5
@@ -35,7 +35,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   flutter_native_splash: ^2.4.1
   flutter_secure_storage: ^9.2.2
-  internet_connection_checker: ^1.0.0+1
+  internet_connection_checker: ^3.0.1
 
   # Icons
   iconsax: ^0.0.8
@@ -43,7 +43,7 @@ dependencies:
 
   # State Management
   isar: ^3.1.0+1
-  flutter_bloc: ^8.1.6
+  flutter_bloc: ^9.0.0
   isar_flutter_libs: ^3.1.0+1
 
   # Firebase
@@ -54,7 +54,7 @@ dependencies:
 
   # Product Specific
   readmore: ^3.0.0
-  carousel_slider: ^4.2.1
+  carousel_slider: ^5.0.0
   flutter_rating_bar: ^4.0.1
 
 
